--- a/app/globals.css
+++ b/app/globals.css
@@ -20,10 +20,7 @@ body {
 header {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    padding: 10px 40px;
-    gap: 20px;
-
+    justify-content: space-around;
 }
 
 a, a:hover {
@@ -31,17 +28,14 @@ a, a:hover {
 }
 
 h1 {
-    padding: 0;
-    margin: 0;
     color: var(--primary-color);
-    width: 40%;
-    font-size: 24px;
+    font-size: 36px;
+    text-transform: uppercase;
 }
 
 h2 {
-    font-size: 36px;
-    text-transform: uppercase;
-    margin: 10px 0;
+    font-size: 28px;
+    font-weight: normal;
 }
 
 
@@ -85,6 +79,7 @@ li {
     header {
         flex-wrap: wrap;
         padding: 0;
+        flex-direction: column;
     }
 
     h1 {
