--- a/app/styles.css
+++ b/app/styles.css
@@ -10,25 +10,27 @@
 
 .requisites {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     font-weight: bold;
+    gap: 20px;
 }
 
 .requisites > div {
     display: flex;
     align-items: center;
-    gap: 15px;
-    padding-bottom: 10px;
+    gap: 5px;
 }
 
 .requisites a {
-    color: var(--pink);
+    color: var(--primary-color);
 }
 .requisites .icon{
     width: 30px;
     height: 30px;
     color: var(--orange);
+}
+
+.location,.phone{
+    margin-right: 30px;
 }
 .slide {
     width: 100%;
@@ -145,10 +147,9 @@ nav {
 }
 
 .feature .icon{
-    border-radius: 100%;
     display: flex;
-    width: 130px;
-    height: 130px;
+    width: 60px;
+    height: 60px;
     align-items: center;
     justify-content: center;
     animation-name: icons;
@@ -311,7 +312,7 @@ nav {
         padding: 0 10px;
     }
 
-    .features, .navbar, .card, .footer-section, .columns {
+    .features, .navbar, .card, .footer-section, .columns,.requisites {
         flex-direction: column;
         padding: 5px;
     }
